--- a/index.html
+++ b/index.html
@@ -706,6 +706,9 @@ document.getElementById("BuyNow").style.display = "inline";
 }
 setTimeout("showBuyNow()", 10000);
 </script>
+	
+	<div>
+	</div>
     <section class="u-clearfix u-custom-color-1 u-section-2" id="sec-c7a8">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h4 class="u-text u-text-1"><b>Este site não é afiliado ao Facebook ou a qualquer entidade do Facebook.</b>&nbsp;Depois que você sair do Facebook, a responsabilidade não é deles e sim do nosso site. Fazemos todos os esforços para indicar claramente e mostrar todas as provas do produto e usamos resultados reais.
