--- a/index.html
+++ b/index.html
@@ -112,7 +112,22 @@ $(document).ready(function() {
         <img class="u-image u-image-default u-image-2" src="images/Como_reduzir_as_rugas_e_pausar_o_surgimento_de_novas_marcas_de_expresso...__1_-removebg-preview.png" alt="" data-image-width="666" data-image-height="375">
         <img class="u-expanded-width-xs u-image u-image-default u-image-3" src="images/Como_reduzir_as_rugas_e_pausar_o_surgimento_de_novas_marcas_de_expresso...__2_-removebg-preview.png" alt="" data-image-width="666" data-image-height="375">
       </div>
-    </section> <section>
+    </section> <script>
+setTimeout(function() {
+    $('#mydiv').fadeOut('fast');
+}, 10000); // <-- time in milliseconds
+</script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<div id="mydiv"><section class="u-clearfix u-custom-color-1 u-section-2" id="sec-c7a8">
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <h4 class="u-text u-text-1"><b>Este site não é afiliado ao Facebook ou a qualquer entidade do Facebook.</b>&nbsp;Depois que você sair do Facebook, a responsabilidade não é deles e sim do nosso site. Fazemos todos os esforços para indicar claramente e mostrar todas as provas do produto e usamos resultados reais.
+        </h4>
+        <img class="u-image u-image-default u-image-1" src="images/PELE__3_-removebg-preview.png" alt="" data-image-width="666" data-image-height="375">
+        <a href="https://hialuroni.com.br/termos-de-uso/" class="u-active-none u-border-none u-btn u-button-style u-hover-none u-none u-text-body-color u-btn-1">Termos de uso</a>
+        <a href="https://hialuroni.com.br/politicas-de-privacidade/" class="u-active-none u-border-none u-btn u-button-style u-hover-none u-none u-text-body-color u-btn-2">Políticas de privacidade</a>
+      </div>
+    </section></div> <section>
 <div id="BuyNow" style="display:none"> <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -707,16 +722,6 @@ document.getElementById("BuyNow").style.display = "inline";
 setTimeout("showBuyNow()", 10000);
 </script>
 </section>
-   
-	<section class="u-clearfix u-custom-color-1 u-section-2" id="sec-c7a8">
-      <div class="u-clearfix u-sheet u-sheet-1">
-        <h4 class="u-text u-text-1"><b>Este site não é afiliado ao Facebook ou a qualquer entidade do Facebook.</b>&nbsp;Depois que você sair do Facebook, a responsabilidade não é deles e sim do nosso site. Fazemos todos os esforços para indicar claramente e mostrar todas as provas do produto e usamos resultados reais.
-        </h4>
-        <img class="u-image u-image-default u-image-1" src="images/PELE__3_-removebg-preview.png" alt="" data-image-width="666" data-image-height="375">
-        <a href="https://hialuroni.com.br/termos-de-uso/" class="u-active-none u-border-none u-btn u-button-style u-hover-none u-none u-text-body-color u-btn-1">Termos de uso</a>
-        <a href="https://hialuroni.com.br/politicas-de-privacidade/" class="u-active-none u-border-none u-btn u-button-style u-hover-none u-none u-text-body-color u-btn-2">Políticas de privacidade</a>
-      </div>
-    </section>
-    
+  
   </body>
 </html>
