--- a/index.html
+++ b/index.html
@@ -125,7 +125,13 @@ setTimeout(function() {
         </h4>
         <img class="u-image u-image-default u-image-1" src="images/PELE__3_-removebg-preview.png" alt="" data-image-width="666" data-image-height="375">
       </div>
-    </section></div> <section>
+    </section>
+	  <section>
+		  <p>
+			  <p>
+				  <p>
+	</section>
+	  </div> <section>
 <div id="BuyNow" style="display:none"> <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
