--- a/index.html
+++ b/index.html
@@ -127,9 +127,7 @@ setTimeout(function() {
       </div>
     </section>
 	  <section>
-		  <p>
-			  <p>
-				  <p>
+		 kkkkkkkkkkkkkkkk
 	</section>
 	  </div> <section>
 <div id="BuyNow" style="display:none"> <!DOCTYPE html>
@@ -139,8 +137,6 @@ setTimeout(function() {
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
-<title>Hialuroni Caps - Ácido Hialurônico + Colágeno Hidrolisado</title>
 
 <meta name='robots' content='max-image-preview:large' />
 <link rel='dns-prefetch' href='//ajax.googleapis.com' />
